; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_utils.c_free_ir_assignment.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_utils.c_free_ir_assignment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hlsl_ir_assignment = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hlsl_ir_assignment*)* @free_ir_assignment to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_ir_assignment(%struct.hlsl_ir_assignment* %0) #0 {
  %2 = alloca %struct.hlsl_ir_assignment*, align 8
  store %struct.hlsl_ir_assignment* %0, %struct.hlsl_ir_assignment** %2, align 8
  %3 = load %struct.hlsl_ir_assignment*, %struct.hlsl_ir_assignment** %2, align 8
  %4 = getelementptr inbounds %struct.hlsl_ir_assignment, %struct.hlsl_ir_assignment* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @free_instr(i32 %5)
  %7 = load %struct.hlsl_ir_assignment*, %struct.hlsl_ir_assignment** %2, align 8
  %8 = getelementptr inbounds %struct.hlsl_ir_assignment, %struct.hlsl_ir_assignment* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @free_instr(i32 %9)
  %11 = load %struct.hlsl_ir_assignment*, %struct.hlsl_ir_assignment** %2, align 8
  %12 = call i32 @d3dcompiler_free(%struct.hlsl_ir_assignment* %11)
  ret void
}

declare dso_local i32 @free_instr(i32) #1

declare dso_local i32 @d3dcompiler_free(%struct.hlsl_ir_assignment*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
